package usantatecla.mastermind.controllers;

import usantatecla.mastermind.models.Game;
import usantatecla.mastermind.models.ProposedCombination;
import usantatecla.mastermind.models.Result;
import usantatecla.mastermind.models.State;

public class ProposalController extends Controller {

  public ProposalController(Game game, State state) {
    super(game, state);
  }

  @Override
  public void accept(VisitorController visitorController) {
    visitorController.visit(this);
  }

  public void addProposedCombination(ProposedCombination proposedCombination) {
    this.game.addProposedCombination(proposedCombination);
  }

  public int getAttempts() {
    return this.game.getAttempts();
  }

  public ProposedCombination getProposedCombination(int position) {
    return this.game.getProposedCombination(position);
  }

  public Result getResult(int position) {
    return this.game.getResult(position);
  }

  public boolean isWinner() {
    return this.game.isWinner();
  }

  public boolean isLooser() {
    return this.game.isLooser();
  }
}
